--- a/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
+++ b/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
@@ -5,9 +5,11 @@
 <article>
   <nav class="navbar">
     <ul>
-      <li><a id="homeLink" href="index.html">Inicio</a></li>
-      <li><a id="ingresoLink" href="invitado-ingreso.html">Ingreso</a></li>
-      <li><a id="registroLink" href="invitado-registro.html">Registro</a></li>
+      <li><a id="homeLink" href="cliente-home.html">Inicio</a></li>
+      <li><a id="carroLink" href="cliente-carro.html">Carro</a></li>
+      <li><a id="listaCompraLink" href="cliente-lista-compras.html">Facturas</a></li>
+      <li><a id="salirLink" href="index.html">Salir</a></li>
+      <li><a id="testIniLink" href="index.html">Volver al invitado-home (borrar despues)</a></li>
     </ul>
   </nav>
   <div class="contenido">
@@ -50,10 +52,13 @@
       </div>
     </div>
     <footer>
-      Prof. Dr. Ricardo Tesoriero Pszytula<br>
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
-      <small>20 de septiembre de 2021</small>
+      <small>Octubre de 2024</small>
     </footer>
   </div>
 </article>
