--- a/public/libreria/js/components/invitado-home/invitado-home-presenter.html
+++ b/public/libreria/js/components/invitado-home/invitado-home-presenter.html
@@ -1,32 +1,35 @@
 <header>
     <h1>Tecnologías y Sistemas Web 24/25</h1>
     <h2>Página Principal</h2>
-  </header>
-  <article>
-    <nav class="navbar">
+</header>
+<article>
+  <nav class="navbar">
+    <ul>
+      <li><a id="homeLink" href="index.html">Inicio</a></li>
+      <li><a id="ingresoLink" href="invitado-ingreso.html">Ingreso</a></li>
+      <li><a id="registroLink" href="invitado-registro.html">Registro</a></li>
+      <li><a id="testClienteHomeLink" href="cliente-home.html">Cliente Home (sin sesión, borrar despues) </a></li>
+      <li><a id="testAdminHomeLink" href="admin-home.html">Admin Home (sin sesión, borrar despues)</a></li>
+    </ul>
+  </nav>
+  <div class="contenido">
+    <nav class="toolbar">
       <ul>
-        <li><a id="homeLink" href="index.html">Inicio</a></li>
-        <li><a id="ingresoLink" href="invitado-ingreso.html">Ingreso</a></li>
-        <li><a id="registroLink" href="invitado-registro.html">Registro</a></li>
+        <!-- <li><a id="registroLink" href="registro.html">Registro</a></li>  -->
       </ul>
     </nav>
-    <div class="contenido">
-      <nav class="toolbar">
-        <!--<ul>
-           <li><a id="homeLink" href="index.html">Inicio</a></li>
-          <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
-          <li><a id="registroLink" href="registro.html">Registro</a></li> 
-        </ul>-->
-      </nav>
-      <div class="info">
-        <div class="mensajes-container" id="mensajesContainer"></div>
-        <div id="catalogo" class="catalogo"></div>      
-      </div>
-      <footer>
-        Prof. Dr. Ricardo Tesoriero Pszytula<br>
-        Tecnologías y Sistemas Web 24/25<br>
-        Universidad de Castilla-La Mancha<br>
-        <small>20 de septiembre de 2021</small>
-      </footer>
+    <div class="info">
+      <div class="mensajes-container" id="mensajesContainer"></div>
+      <div id="catalogo" class="catalogo"></div>      
     </div>
-  </article>
+    <footer>
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
+      Tecnologías y Sistemas Web 24/25<br>
+      Universidad de Castilla-La Mancha<br>
+      <small>Octubre de 2024</small>
+    </footer>
+  </div>
+</article>
