cambiado el titulo de las páginas de iniciar sesion y registro

--- a/public/libreria/js/components/invitado-ingreso/invitado-ingreso-presenter.html
+++ b/public/libreria/js/components/invitado-ingreso/invitado-ingreso-presenter.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Tecnologías y Sistemas Web 24/25</h1>
-    <h2>Página Principal</h2>
+    <h2>Iniciar Sesión (no funciona todavía)</h2>
 </header>
 <article>
   <nav class="navbar">
