Sustitución del código base 4

--- a/public/libreria/js/components/admin-agregar-libro/admin-agregar-libro-presenter.html
+++ b/public/libreria/js/components/admin-agregar-libro/admin-agregar-libro-presenter.html
@@ -40,10 +40,13 @@
       </form>
     </div>
     <footer>
-      Prof. Dr. Ricardo Tesoriero Pszytula<br>
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
-      <small>20 de septiembre de 2021</small>
+      <small>Octubre de 2024</small>
     </footer>
   </div>
 </article>
