--- a/public/libreria/js/components/admin-home/admin-home-presenter.html
+++ b/public/libreria/js/components/admin-home/admin-home-presenter.html
@@ -23,10 +23,13 @@
       <div id="catalogo" class="catalogo"></div>      
     </div>
     <footer>
-      Prof. Dr. Ricardo Tesoriero Pszytula<br>
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
-      <small>20 de septiembre de 2021</small>
+      <small>Octubre de 2024</small>
     </footer>
   </div>
 </article>
