--- a/public/libreria/js/components/invitado-ingreso/invitado-ingreso-presenter.html
+++ b/public/libreria/js/components/invitado-ingreso/invitado-ingreso-presenter.html
@@ -38,7 +38,10 @@
       </form>
     </div>
     <footer>
-      Prof. Dr. Ricardo Tesoriero Pszytula<br>
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
       <small>20 de septiembre de 2021</small>
