eliminado boton de desborrar

--- a/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
+++ b/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
@@ -45,7 +45,7 @@
     <nav class="toolbar">
       <ul>
         <li><a id="borrarLink" href="borrar-libro.html">Borrar</a></li>
-        <li><a id="desborrarLink" href="desborrar-libro.html">Desborrar</a></li>
+        <!-- <li><a id="desborrarLink" href="desborrar-libro.html">Desborrar</a></li> -->
         <li><a id="modificarLink" href="modificar-libro.html">Modificar</a></li>
         <!-- <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
         <li><a id="registroLink" href="registro.html">Registro</a></li> -->
