--- a/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
+++ b/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
@@ -44,11 +44,21 @@
           </tfoot>
         </table>
         <!-- (Opcional) Botón para proceder a la compra -->
-        <!-- <button id="comprarButton">Comprar</button> -->
+        <nav class="toolbar">
+          <ul>
+            <li><a id="compraLink" href="cliente-carro.html">Comprar</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
     <footer>
-      <!-- Información del pie de página -->
+      Ángel Barceló Parada<br>
+      Gloria Cuadros García<br>
+      Elías Lucas Monsalve<br>
+      Alejandro Ramos Moreno<br>
+      Tecnologías y Sistemas Web 24/25<br>
+      Universidad de Castilla-La Mancha<br>
+      <small>Octubre de 2024</small>
     </footer>
   </div>
 </article>
