pruebas de mdoificar libro

--- a/public/libreria/js/components/admin-agregar-libro/admin-agregar-libro-presenter.html
+++ b/public/libreria/js/components/admin-agregar-libro/admin-agregar-libro-presenter.html
@@ -13,7 +13,7 @@
   <div class="contenido">
     <nav class="toolbar">
       <ul>
-        <li><a id="agregarLink" href="admin-agregar-libro.html">Agregar</a></li>
+        <!-- <li><a id="agregarLink" href="admin-agregar-libro.html">Agregar</a></li> -->
         <!-- <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
         <li><a id="registroLink" href="registro.html">Registro</a></li> -->
       </ul>
