--- a/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
+++ b/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
@@ -6,7 +6,7 @@
   <nav class="navbar">
     <ul>
       <li><a id="homeLink" href="admin-home.html">Inicio</a></li>      
-      <!-- <li><a id="facturasLink" href="admin-facturas.html">Facturas</a></li> -->
+      <li><a id="adminPerfilLink" href="admin-perfil.html">Facturas</a></li>
       <li><a id="salirLink" href="home.html">Salir</a></li>
     </ul>
   </nav>
@@ -46,7 +46,7 @@
       <ul>
         <li><a id="borrarLink" href="borrar-libro.html">Borrar</a></li>
         <!-- <li><a id="desborrarLink" href="desborrar-libro.html">Desborrar</a></li> -->
-        <li><a id="modificarLink" href="modificar-libro.html">Modificar</a></li>
+        <li><a id="modificarLink" href="admin-modificar-libro.html">Modificar</a></li>
         <!-- <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
         <li><a id="registroLink" href="registro.html">Registro</a></li> -->
       </ul>
