--- a/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
+++ b/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
@@ -14,6 +14,7 @@
     <div class="info">
       <div class="mensajes-container" id="mensajesContainer"></div>
       <!-- <div id="catalogo" class="catalogo"></div>    -->
+
       <div id="detalle" class="detalle">
         <img class="portada" src="data:image/gif;base64,R0lGODlhAQABAIAAAMLCwgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
         <p>
@@ -46,7 +47,8 @@
       <ul>
         <li><a id="borrarLink" href="borrar-libro.html">Borrar</a></li>
         <!-- <li><a id="desborrarLink" href="desborrar-libro.html">Desborrar</a></li> -->
-        <li><a id="modificarLink" href="admin-modificar-libro.html">Modificar</a></li>
+        <li><a id="modificarLink" href="#">Modificar Libro</a></li>
+        
         <!-- <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
         <li><a id="registroLink" href="registro.html">Registro</a></li> -->
       </ul>
