eliminado el boton agregar de la vista modificar y agregado el boton perfil a todas las vistas de admin

--- a/public/libreria/js/components/admin-modificar-libro/admin-modificar-libro-presenter.html
+++ b/public/libreria/js/components/admin-modificar-libro/admin-modificar-libro-presenter.html
@@ -6,14 +6,14 @@
   <nav class="navbar">
     <ul>
       <li><a id="homeLink" href="admin-home.html">Inicio</a></li>
-      <!-- <li><a id="facturasLink" href="admin-facturas.html">Facturas</a></li> -->
+      <li><a id="perfilAdminLink" href="admin-perfil.html">Perfil</a></li>
       <li><a id="salirLink" href="home.html">Salir</a></li>
     </ul>
   </nav>
   <div class="contenido">
     <nav class="toolbar">
       <ul>
-        <li><a id="agregarLink" href="admin-agregar-libro.html">Agregar</a></li>
+        <!-- <li><a id="agregarLink" href="admin-agregar-libro.html">Agregar</a></li> -->
         <!-- <li><a id="ingresoLink" href="ingreso.html">Ingreso</a></li>
         <li><a id="registroLink" href="registro.html">Registro</a></li> -->
       </ul>
