--- a/public/libreria/js/components/admin-home/admin-home-presenter.html
+++ b/public/libreria/js/components/admin-home/admin-home-presenter.html
@@ -5,7 +5,8 @@
 <article>
   <nav class="navbar">
     <ul>
-      <li><a id="homeLink" href="admin-home.html">Inicio</a></li>      
+      <li><a id="homeLink" href="admin-home.html">Inicio</a></li>    
+      <li><a id="perfilLink" href="admin-perfil.html">Perfil</a></li>   
       <!-- <li><a id="facturasLink" href="admin-facturas.html">Facturas</a></li> -->
       <li><a id="salirLink" href="home.html">Salir</a></li>
     </ul>
