Perfil admin actualizado

--- a/public/libreria/js/components/admin-perfil/admin-perfil-presenter.html
+++ b/public/libreria/js/components/admin-perfil/admin-perfil-presenter.html
@@ -1,7 +1,7 @@
 <html>
   <header>
     <h1>Tecnologías y Sistemas Web 24/25</h1>
-    <h2>Modificar datos de administrador</h2>
+    <h2>Perfil Admin</h2>
   </header>
   <article>
     <nav class="navbar">
@@ -34,24 +34,20 @@
           <label for="passwordInput">Contraseña</label>
           <input id="passwordInput" name="password" type="password" placeholder="Ingrese la contraseña" value="" required><br>
 
-          <!--
-          <label for="rolSelect">Rol</label>
-          <select id="rolSelect" name="rol" required>
-            <option value="CLIENTE" selected>CLIENTE</option>
-            <option value="ADMIN">ADMIN</option>
-          </select><br>
-          -->
-          
           <footer>
             <input id="modificarInput" name="modificar" type="submit" value="Modificar">
           </footer>
         </form>
       </div>
       <footer>
+        Ángel Barceló Parada<br>
+        Gloria Cuadros García<br>
+        Elías Lucas Monsalve<br>
+        Alejandro Ramos Moreno<br>
         Prof. Dr. Ricardo Tesoriero Pszytula<br>
         Tecnologías y Sistemas Web 24/25<br>
         Universidad de Castilla-La Mancha<br>
-        <small>20 de septiembre de 2021</small>
+        <small>Octubre de 2024</small>
       </footer>
     </div>
   </article>
