añadido el boton carro al ver libro del cliente

--- a/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
+++ b/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
@@ -15,6 +15,7 @@
     <nav class="navbar">
       <ul>
         <li><a id="homeLink" href="cliente-home.html">Inicio</a></li>
+        <li><a id="carroLink" href="cliente-carro.html">Carro</a></li>
         <li><a id="facturasLink" href="cliente-facturas.html">Facturas</a></li>
         <li><a id="salirLink" href="home.html">Salir</a></li>
       </ul>
