cambio en el boton comprar (en el carro) y agregar al carro(en ver libro cliente) para matchear la estetica del resto de botones de la aplicación

--- a/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
+++ b/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
@@ -24,6 +24,7 @@
       <div class="info">
         <!-- Contenedor para mensajes -->
         <div class="mensajes-container" id="mensajesContainer"></div>
+        
 
         <!-- Tabla del carro de compras -->
         <div id="carro" class="carro">
@@ -56,8 +57,13 @@
             </tfoot>
           </table>
           <!-- Botón para proceder a la compra -->
-          <button id="comprarButton">Comprar</button>
+          <!-- <button id="comprarButton">Comprar</button> -->
         </div>
+        <nav class="toolbar">
+          <ul>
+            <li><a id="comprarLink" href=>Comprar</a></li>
+          </ul>
+        </nav>
       </div>
       <footer>
         <p>
