--- a/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
+++ b/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
@@ -55,7 +55,9 @@
       <nav class="toolbar">
         <ul>
           <!-- Cambiamos el enlace por un botón y ajustamos el id -->
-          <li><button id="agregarCarritoButton">Agregar al carro</button></li>
+          <!-- <li><button id="agregarCarritoButton">Agregar al carro</button></li> -->
+          <li><a id="agregarAlCarroLink" href=>Añadir al carro</a></li>
+
         </ul>
       </nav>
       <footer>
