--- a/public/libreria/estilo.css
+++ b/public/libreria/estilo.css
@@ -377,9 +377,11 @@ div.mensajes {
 }
 
 .carro table {
+  width: 100%;
   height: 100%;
   padding: 4px;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 .carro tfoot {
@@ -395,6 +397,9 @@ div.mensajes {
 .carro th,
 .carro td {
   padding: 4px;
+  text-align: center;
+  width: 20%;
+  word-wrap: break-word;
 }
 
 .carro tr,
@@ -403,8 +408,10 @@ div.mensajes {
 }
 
 .carro tfoot th:first-child {
+  /* border-right: 4px solid salmon; */
   text-align: right;
 }
+
 
 .carro tbody {
   /* .carro tbody tr:last-child { */
