--- a/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
+++ b/public/libreria/js/components/cliente-carro/cliente-carro-presenter.html
@@ -33,9 +33,9 @@
               <tr>
                 <th>Título</th>
                 <th>Cantidad</th>
-                <th>Precio Unitario</th>
-                <th>Total</th>
-                <th>Acciones</th>
+                <th>Precio por unidad</th>
+                <th>Precio total</th>
+                <th>    </th>
               </tr>
             </thead>
             <tbody id="carroItems">
@@ -44,15 +44,15 @@
             <tfoot>
               <tr>
                 <th colspan="3">Subtotal</th>
-                <td colspan="2" id="subtotal">€ 0.00</td>
+                <td colspan="1" id="subtotal">€ 0.00</td>
               </tr>
               <tr>
                 <th colspan="3">IVA (21%)</th>
-                <td colspan="2" id="iva">€ 0.00</td>
+                <td colspan="1" id="iva">€ 0.00</td>
               </tr>
               <tr>
                 <th colspan="3">Total</th>
-                <td colspan="2" id="total">€ 0.00</td>
+                <td colspan="1" id="total">€ 0.00</td>
               </tr>
             </tfoot>
           </table>
