--- a/public/libreria/estilo.css
+++ b/public/libreria/estilo.css
@@ -171,7 +171,7 @@ nav.toolbar ul li:hover {
 
 /**
 * Form
-*/
+*/ 
 
 form {
   flex-grow: 1;
@@ -451,4 +451,23 @@ div .factura-field {
 
 div .factura-field>input {
   flex-grow: 1;
+}
+
+/* Formulario pago */
+
+.formPago {
+  width: 90%;
+  justify-content: center;
+}
+
+.fedn {
+  justify-content: center;
+  align-items: baseline;
+  display: flex;
+  width: 100%;
+  gap: 10px; /* Espacio entre los campos */
+}
+
+.fedn input {
+  width: 500px;
 }
