boton de perfil agregado a las vistas del cliente

--- a/public/libreria/js/components/cliente-home/cliente-home-presenter.html
+++ b/public/libreria/js/components/cliente-home/cliente-home-presenter.html
@@ -9,7 +9,7 @@
       <li><a id="carroLink" href="cliente-carro.html">Carro</a></li>
       <li><a id="facturasLink" href="cliente-facturas.html">Facturas</a></li>
       <li><a id="perfilLink" href="cliente-perfil.html">Perfil</a></li>
-      <li><a id="salirLink" href="home.html" onclick="console.log('Funciona?')">Salir</a></li>
+      <li><a id="salirLink" href="home.html" onclick="console.log('Sesión cerrada')">Salir</a></li>
     </ul>
   </nav>
   <div class="contenido">
