--- a/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
+++ b/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
@@ -6,8 +6,11 @@
   <article>
     <nav class="navbar">
       <ul>
-        <li><a id="homeLink" href="index.html">Inicio</a></li>
-        <li><a id="volverHome" href="cliente-home.html">Volver</a></li>
+        <li><a id="homeLink" href="cliente-home.html">Inicio</a></li>
+        <li><a id="carroLink" href="cliente-carro.html">Carro</a></li>
+        <li><a id="facturasLink" href="cliente-facturas.html">Facturas</a></li>
+        <li><a id="perfilLink" href="cliente-perfil.html">Perfil</a></li>
+        <li><a id="salirLink" href="home.html" onclick="console.log('Sesión cerrada')">Salir</a></li>
       </ul>
     </nav>
     <div class="contenido">
