Hecha la pagina Facturas y el boton Pagar ya es funcional

--- a/public/libreria/js/components/cliente-pago/cliente-pago-presenter.html
+++ b/public/libreria/js/components/cliente-pago/cliente-pago-presenter.html
@@ -90,7 +90,7 @@
         <!-- Botón para proceder al pago -->
         <nav class="toolbar">
           <ul>
-            <li><a id="pagarLink" href="#">Pagar</a></li>
+            <li><a id="pagarButton" href="#">Pagar</a></li>
           </ul>
         </nav>
       </div>
