Quitado codigo innecesario

--- a/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
+++ b/public/libreria/js/components/cliente-ver-libro/cliente-ver-libro-presenter.html
@@ -57,7 +57,7 @@
         <ul>
           <!-- Cambiamos el enlace por un botón y ajustamos el id -->
           <!-- <li><button id="agregarCarritoButton">Agregar al carro</button></li> -->
-          <li><a id="agregarAlCarroLink" href=>Añadir al carro</a></li>
+          <li><a id="agregarAlCarroLink">Añadir al carro</a></li>
 
         </ul>
       </nav>
