mejoras visuales variadas

--- a/public/libreria/js/components/cliente-facturas/cliente-facturas-presenter.html
+++ b/public/libreria/js/components/cliente-facturas/cliente-facturas-presenter.html
@@ -25,7 +25,7 @@
         <div class="mensajes-container" id="mensajesContainer"></div>
 
         <!-- Tabla de facturas -->
-        <div id="listaFactura" class="carro">
+        <div id="listaFactura" class="listFactura">
           <table>
             <thead>
               <tr>
