--- a/public/libreria/estilo.css
+++ b/public/libreria/estilo.css
@@ -439,6 +439,12 @@ div.mensajes {
   width: 3em;
 }
 
+.carro button {
+  width: 80%;
+  border: 2px solid chocolate;
+  background-color: white;
+}
+
 /**
 * Factura
 */
@@ -470,4 +476,61 @@ div .factura-field>input {
 
 .fedn input {
   width: 500px;
+}
+
+/* Facturas */
+
+.listFactura {
+  width: 90%;
+  height: 100%;
+}
+
+.listFactura table {
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  border-collapse: collapse;
+  /* table-layout: fixed; */
+}
+
+.listFactura tfoot {
+  border-top: 4px solid chocolate;
+  /* border-bottom: 1px solid black; */
+}
+
+.listFactura thead {
+  border-top: 2px solid white;
+  border-bottom: 1px solid chocolate;
+}
+
+.listFactura th,
+.listFactura td {
+  vertical-align: center;
+  border-top: dashed chocolate 1px;
+  padding: 5px;
+  text-align: center;
+  width: 20%;
+  word-wrap: break-word;
+}
+
+.listFactura tr,
+.item-detalle {
+  width: 100%;
+}
+
+.listFactura tfoot th:first-child {
+  /* border-right: 4px solid salmon; */
+  text-align: right;
+}
+
+
+.listFactura tbody {
+  /* .carro tbody tr:last-child { */
+  height: 100%;
+}
+
+.listFactura button {
+  width: 80%;
+  border: 2px solid chocolate;
+  background-color: white;
 }
