modificación de la fecha que aparece en la parte baja del proyecto

--- a/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
+++ b/public/libreria/js/components/admin-ver-libro/admin-ver-libro-presenter.html
@@ -6,7 +6,7 @@
   <nav class="navbar">
     <ul>
       <li><a id="homeLink" href="admin-home.html">Inicio</a></li>      
-      <li><a id="adminPerfilLink" href="admin-perfil.html">Facturas</a></li>
+      <li><a id="adminPerfilLink" href="admin-perfil.html">Perfil</a></li>
       <li><a id="salirLink" href="home.html">Salir</a></li>
     </ul>
   </nav>
@@ -60,7 +60,7 @@
       Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
-      <small>Octubre de 2024</small>
+          <small>Noviembre 2024</small>
     </footer>
   </div>
 </article>
