--- a/public/libreria/js/components/cliente-pago/cliente-pago-presenter.html
+++ b/public/libreria/js/components/cliente-pago/cliente-pago-presenter.html
@@ -102,7 +102,7 @@
           Alejandro Ramos Moreno<br>
           Tecnologías y Sistemas Web 24/25<br>
           Universidad de Castilla-La Mancha<br>
-          <small>20 de septiembre de 2021</small>
+          <small>Noviembre 2024</small>
         </p>
       </footer>
     </div>
