--- a/public/libreria/js/components/invitado-ver-libro/invitado-ver-libro-presenter.html
+++ b/public/libreria/js/components/invitado-ver-libro/invitado-ver-libro-presenter.html
@@ -55,7 +55,7 @@
       Alejandro Ramos Moreno<br>
       Tecnologías y Sistemas Web 24/25<br>
       Universidad de Castilla-La Mancha<br>
-      <small>Octubre de 2024</small>
+          <small>Noviembre 2024</small>
     </footer>
   </div>
 </article>
