--- a/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
+++ b/public/libreria/js/components/cliente-perfil/cliente-perfil-presenter.html
@@ -50,7 +50,7 @@
         Prof. Dr. Ricardo Tesoriero Pszytula<br>
         Tecnologías y Sistemas Web 24/25<br>
         Universidad de Castilla-La Mancha<br>
-        <small>Octubre de 2024</small>
+            <small>Noviembre 2024</small>
       </footer>
     </div>
   </article>
